# RAG

./: 00_Overview.ipynb  02_Vector_search_deep_dive.ipynb  04_Benchmarking_RAG_systems.ipynb  README.md  improving_rag_performance.ipynb  main.py  parameters.py  pyproject.toml  requirements.txt  workflow.ipynb
chroma_data/: chroma.sqlite3
extras/: local-gpt-cli.py  local-gpt-gui.py
