[project]
name = "dsr-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.3",
    "einops==0.8.0",
    "gradio==4.44.1",
    "numpy==1.26.4",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "requests==2.32.3",
    "sentence-transformers==3.0.1",
    "tqdm==4.66.4",
    "yake==0.4.8",
]
